update: swagger, PUT route, Postman-collection
