# swagger/admins.yml
@@ -60,6 +60,26 @@ paths:
           description: Successful response
           content:
             application/json: {}
+  /admins/users/role:
+    put:
+      tags:
+        - admins
+      summary: Benutzer Rolle ändern zu Admin oder User
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example:
+                userId: 4
+                role: admin
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
   /admins/users/5:
     delete:
       tags:
